Fix layout and alignment

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -3,10 +3,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400&display=swap');
 @media only screen and (max-width:745px) {  
     .container3,.p-item,.left, .right {
-      width:90vw !important;
+      width:94vw !important;
     }
     .container3{
         flex-wrap: wrap;
+    }
+    footer{
+        padding-left: 3% !important;
     }
 }
 html{
@@ -38,9 +41,6 @@ align-items: flex-start;
 #navbar img{
     height: 3.5em;
     color: #f8d16c;
-}
-#logo{
-    width:50%;
 }
 #nav-container{
     display: flex;
@@ -87,7 +87,7 @@ align-items: flex-start;
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 35vw;
+    width: 30vw;
     align-content: center;
     /* justify-content: center; */
     justify-content: space-evenly;
@@ -112,7 +112,7 @@ align-items: flex-start;
 }
 .right{
     padding: 5px;
-    width: 35vw;
+    width: 30vw;
     align-content: center;
     display: flex;
     flex-direction: column;
@@ -129,7 +129,7 @@ align-items: flex-start;
     align-items: center; 
 }
 .projects img{
-    width: 50%;
+    width: 290px;
     height: auto;
 }
 .head{
@@ -208,7 +208,6 @@ align-items: flex-start;
     margin-top:15px;
     background-color: #ebebeb;
     width:100vw;
-    
 }
 .projects .container1{
     flex-wrap: wrap;
@@ -242,23 +241,28 @@ align-items: flex-start;
     color:white;
     font-family: 'Bebas Neue';
     font-weight: lighter;
-    font-size: 1.7rem;
+    font-size: 1.5rem;
 }
 #contact p{
     font-size: 1rem;
     color: #ddd;
     line-height: 1.7;
+    margin-top: 0.5em;
+    margin-bottom: 0.5em;
 }
 #contact .icon{
     margin-top:10px;
-    width:35%;
-    color: #f8d16c;
+    width:8em;
     display:flex;
     align-items: center;
     justify-content: space-between;
 }
-.icon img{
-    width: 25px;
+span{
+    margin:12px;
+    color: #f8d16c;
+}
+#contact img{
+    width: 20px;
 }
 footer{
     align-items: center;
@@ -266,5 +270,5 @@ footer{
     color: white;
     padding-top:1em;
     padding-bottom:1em;
-    padding-left: 8em;;
+    padding-left: 13%;
 }
