--- a/CSS/style2.css
+++ b/CSS/style2.css
@@ -12,9 +12,9 @@
     margin-top: 5.4em;
 }
 .container2{
-    margin: 2vw;
-    margin-left: 7vw;
-    margin-right:7vw;
+    margin: 0.5vw;
+    margin-left: 11vw;
+    margin-right:11vw;
     background-color: white;
     border-radius: 10px;
     display: flex;
@@ -30,6 +30,7 @@
     margin:12px;
     border-radius: 6px;
     width:23vw;
+
     box-shadow: 0 1px 8px 0 rgba(0, 0, 0, 0.2), 0 2px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .pic{
